--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ahorcado1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.23.1.jar=src\\conexion\\sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.23.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
